--- a/inicio/fondo.html
+++ b/inicio/fondo.html
@@ -35,7 +35,9 @@
         </div>
         <!-- End Logo container-->
 
+
         <div class="menu-extras">
+
 
           <ul class="nav navbar-nav navbar-right pull-right">
             <li>
@@ -47,8 +49,7 @@
             <li class="dropdown user-box">
               <a href="#" class="dropdown-toggle waves-effect waves-light profile " data-toggle="dropdown"
                 aria-expanded="true">
-                Sebastián Meli <img src="../assets/images/users/avatar-1.jpg" alt="user-img"
-                  class="img-circle user-img">
+                Sebastián Meli <img src="../assets/images/users/avatar-1.jpg" alt="user-img" class="img-circle user-img">
                 <div class="user-status away"><i class="zmdi zmdi-dot-circle"></i></div>
               </a>
 
@@ -120,73 +121,53 @@
 
   <div class="wrapper">
     <div class="container">
-    </br>
 
-    <div class="row">
-        <div class="col-md-12">
-          <div class="panel">
+      <div class="container mb-3 ">
+        </br>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="panel">
+              <div class="panel-heading">
+                <h1 class="text-center">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h1>
+              </div>
 
-            <div class="panel-heading">
-              <h3 class="panel-title text-center">Indicadores</h3>
-            </div>
+              <div class="panel-body text-center">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="text-center">
+                      <img src="../assets/images/becas.jpg" height="250" width="380">
+                    </div>
 
-            <div class="panel-body">
-              <div class="row">
-                <div class="panel-body">
-                  <div class="inbox-widget">
 
-                    <div class="row">
+                  </div>
+                  <div class="col-md-8">
+                    <!-- texto -->
+                    <div class="panel-heading">
+                      <h3 class=" text-center panel-title">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h3>
+                      <p><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat."</em></p>
+                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                          ex ea commodo consequat.</p>
+                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat.</p>
 
-                      <div class="col-lg-6">
-                        <div class="panel panel-color panel-primary">
-                          <div class="panel-heading">
-                            <h3 class="panel-title text-center">Publicaciones científicas chilenas con más citas en Web of Science 2021</h3>
-                          </div>
-                          <div class="panel-body">
-                            <div class="row text-center">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                ex ea commodo consequat.</p>
-                            </div>
-                            <div>
-                              <a class="btn btn-danger" style="float:left" href="data.html" role="button">Ver Datos de Indicadores <i class="fa  md-arrow-forward"></i></a>
-                              <div class="text-right">
-                                <p>
-                                  <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                      <p class="inbox-item-text text-left" style="margin-top:6px">
+                        <a href="#"> Ir a Inscribire <i class="md ion-arrow-right-c"></i></a>
+                      </p>
 
-                      <div class="col-lg-6">
-                        <div class="panel panel-color panel-primary">
-                          <div class="panel-heading">
-                            <h3 class="panel-title text-center">Ranking PLOS Biology 2021</h3>
-                          </div>
-                          <div class="panel-body">
-                            <div class="row text-center">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                ex ea commodo consequat.</p>
-                            </div>
-                            <div>
-                              <a class="btn btn-danger" style="float:left" href="data.html" role="button">Ver Datos de Indicadores <i class="fa  md-arrow-forward"></i></a>
-                              <div class="text-right">
-                                <p>
-                                  <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
-                                  <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat.</p>
+                      <div class="text-left">
+                        <p>
+                          <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                          <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                          <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                          <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                        </p>
                       </div>
 
                     </div>
