--- a/inicio/fondpublic.html
+++ b/inicio/fondpublic.html
@@ -156,7 +156,7 @@
                                 <div class="row">
                                   <div class="col-md-6">
                                     <p class="inbox-item-text" style="margin-top:6px">
-                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                      <a href="fondo.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
                                     </p>
                                   </div>
                                   <div class="col-md-6 text-right">
@@ -188,7 +188,7 @@
                                 <div class="row">
                                   <div class="col-md-6">
                                     <p class="inbox-item-text" style="margin-top:6px">
-                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                      <a href="fondo.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
                                     </p>
                                   </div>
                                   <div class="col-md-6 text-right">
@@ -220,7 +220,7 @@
                                 <div class="row">
                                   <div class="col-md-6">
                                     <p class="inbox-item-text" style="margin-top:6px">
-                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                      <a href="fondo.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
                                     </p>
                                   </div>
                                   <div class="col-md-6 text-right">
@@ -252,7 +252,7 @@
                                 <div class="row">
                                   <div class="col-md-6">
                                     <p class="inbox-item-text" style="margin-top:6px">
-                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                      <a href="fondo.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
                                     </p>
                                   </div>
                                   <div class="col-md-6 text-right">
@@ -268,51 +268,13 @@
                           </div>
                         </div>
 
-
-
                       </div>
-
-
-
-                      <!-- <div class="inbox-item">
-                        <p class="inbox-item-author">Postulaciones Capital Semilla SERCOTEC 2022</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div> -->
-
-                      <!-- <div class="inbox-item">
-                        <p class="inbox-item-author">Postulaciones Capital Abeja SERCOTEC 2022</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div> -->
-
-                      <!-- <div class="inbox-item">
-                        <p class="inbox-item-author">Postulaciones a Creditos de Eduacion Superior</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div> -->
-
-                      <!-- <div class="inbox-item">
-                        <p class="inbox-item-author">Postulaciones al IFE mes de Diciembre</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div> -->
 
                     </div>
                   </div>
 
                 </div>
               </div>
-
-
-
-
-
-
             </div>
           </div>
         </div>
