--- a/inicio/index.html
+++ b/inicio/index.html
@@ -126,20 +126,24 @@
               <div class="inbox-widget">
                 <div class="inbox-item">
                   <p class="inbox-item-author">Beca de Doctorado Nacional, Año académico 2022</p>
-                  <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                      style="margin-left:40%"> Compartir </a></p>
+                  <p class="inbox-item-text" style="margin-top:6px">
+                    <a href="fondo.html"> Abrir enlace </a>
+                    <a href="#" style="margin-left:40%"> Compartir </a>
+                  </p>
                   <p class="inbox-item-date">23-11-2021</p>
                 </div>
                 <div class="inbox-item">
                   <p class="inbox-item-author">Concurso IDeA I+D 2022</p>
-                  <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                      style="margin-left:40%"> Compartir </a></p>
+                  <p class="inbox-item-text" style="margin-top:6px">
+                    <a href="fondo.html"> Abrir enlace </a>
+                    <a href="#" style="margin-left:40%"> Compartir </a></p>
                   <p class="inbox-item-date">23-11-2021</p>
                 </div>
                 <div class="inbox-item">
                   <p class="inbox-item-author">Concurso de Instituto Milenio en Ciencias Sociales 2022</p>
-                  <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                      style="margin-left:40%"> Compartir </a></p>
+                  <p class="inbox-item-text" style="margin-top:6px">
+                    <a href="fondo.html"> Abrir enlace </a>
+                    <a href="#" style="margin-left:40%"> Compartir </a></p>
                   <p class="inbox-item-date">23-11-2021</p>
                 </div>
               </div>
@@ -158,13 +162,13 @@
             </div>
             <div class="panel-body">
               <div class="inbox-widget">
-                <a href="#">
+                <a href="data.html">
                   <div class="inbox-item">
                     <p>Publicaciones científicas chilenas con más citas en Web of Science 2021</p>
                     <p class="inbox-item-text">“”</p>
                   </div>
                 </a>
-                <a href="#">
+                <a href="data.html">
                   <div class="inbox-item">
                     <p>Ranking PLOS Biology 2021</p>
                     <p class="inbox-item-text">“Varios académicos de la Universidad Austral de Chile se encuentran en el
@@ -173,11 +177,11 @@
                 </a>
                 <br>
                 <div class="col-lg-6">
-                  <a href="#"><i class="fa fa-globe "></i> <span> Comparación internacional</span> </a>
+                  <a href="data.html"><i class="fa fa-globe "></i> <span> Comparación internacional</span> </a>
                 </div>
                 <div class="col-lg-6">
-                  <a href="#"><i class="fa fa-flask"></i> <span> Ranking de publicaciones científicas de universidades
-                      chilenas./span> </a>
+                  <a href="data.html"><i class="fa fa-flask"></i> <span> Ranking de publicaciones científicas de universidades
+                      chilenas. </span> </a>
                 </div>
               </div>
             </div>
