--- a/perfilOr/miPerfil.html
+++ b/perfilOr/miPerfil.html
@@ -280,10 +280,10 @@
                       </div>
 
                       <div class="row">
-                        <div class="col-lg-12">
-                          <div class="form-group col-md-10">
-                            <label for="exampleFormControlTextarea1 col-md-2 control-label">Descripción</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                        <div>
+                          <label class="col-md-2 control-label">Descripción</label>
+                          <div class="col-md-10">
+                            <textarea class="form-control" rows="5"></textarea>
                           </div>
                         </div>
                       </div>
@@ -348,10 +348,10 @@
                         </div>
 
                         <div class="row">
-                          <div class="col-lg-12">
-                            <div class="form-group col-md-10">
-                              <label for="exampleFormControlTextarea1 col-md-2 control-label">Descripción</label>
-                              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                          <div>
+                            <label class="col-md-2 control-label">Descripción</label>
+                            <div class="col-md-10">
+                              <textarea class="form-control" rows="5"></textarea>
                             </div>
                           </div>
                         </div>
