--- a/inicio/data.html
+++ b/inicio/data.html
@@ -256,7 +256,7 @@
                                           <th>Nombre</th>
                                           <th>Cargo desempeñado</th>
                                           <th>Oficina de trabajo en el Exterior</th>
-                                          <th>Ranking de Desempeño</th>
+                                          <th>Ranking de</th>
                                           <th>Fecha de Inicio</th>
                                           <th>Fondos</th>
                                         </tr>
@@ -783,34 +783,34 @@
 
   <!-- JAVASCRIPT -->
   <!-- moment js  -->
-  <script src="assets/plugins/moment/moment.js"></script>
+  <script src="../assets/plugins/moment/moment.js"></script>
 
   <!-- counters  -->
-  <script src="assets/plugins/waypoints/lib/jquery.waypoints.js"></script>
-  <script src="assets/plugins/counterup/jquery.counterup.min.js"></script>
+  <script src="../assets/plugins/waypoints/lib/jquery.waypoints.js"></script>
+  <script src="../assets/plugins/counterup/jquery.counterup.min.js"></script>
 
   <!-- sweet alert  -->
-  <script src="assets/plugins/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../assets/plugins/sweetalert/dist/sweetalert.min.js"></script>
 
 
   <!-- flot Chart -->
-  <script src="assets/plugins/flot-chart/jquery.flot.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.time.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.tooltip.min.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.resize.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.pie.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.selection.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.stack.js"></script>
-  <script src="assets/plugins/flot-chart/jquery.flot.crosshair.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.time.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.tooltip.min.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.resize.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.pie.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.selection.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.stack.js"></script>
+  <script src="../assets/plugins/flot-chart/jquery.flot.crosshair.js"></script>
 
   <!-- todos app  -->
-  <script src="assets/pages/jquery.todo.js"></script>
+  <script src="../assets/pages/jquery.todo.js"></script>
 
   <!-- chat app  -->
-  <script src="assets/pages/jquery.chat.js"></script>
+  <script src="../assets/pages/jquery.chat.js"></script>
 
   <!-- dashboard  -->
-  <script src="assets/pages/jquery.dashboard.js"></script>
+  <script src="../assets/pages/jquery.dashboard.js"></script>
 
   <script type="text/javascript">
     jQuery(document).ready(function ($) {
