--- a/inicio/data.html
+++ b/inicio/data.html
@@ -195,7 +195,7 @@
                             <!-- /portlet heading -->
                             <div class="portlet-heading">
                               <h3 class="portlet-title text-dark text-uppercase">
-                                Selling Stats
+                                Comparaciones de desarrollo
                               </h3>
 
                               <!-- <div class="portlet-widgets">
@@ -222,12 +222,12 @@
 
                                       <div class="col-sm-6">
                                         <h4 class="counter">86,956</h4>
-                                        <small class="text-muted"> Weekly Report</small>
+                                        <small class="text-muted"> Retribuciones</small>
                                       </div>
 
                                       <div class="col-sm-6">
                                         <h4 class="counter">86,69</h4>
-                                        <small class="text-muted">Monthly Report</small>
+                                        <small class="text-muted"> Logros de la investigación</small>
                                       </div>
 
                                     </div>
