--- a/inicio/news.html
+++ b/inicio/news.html
@@ -123,12 +123,10 @@
     <div class="container mb-3">
     </br>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-12">
           <div class="panel">
-            <!-- <div class="panel-heading">
-              <h3 class="panel-title text-center">Noticia N°1</h3>
-            </div> -->
+
             <div class="panel-body">
               <div class="row">
 
@@ -181,32 +179,77 @@
 
 
 
-                <!-- <div class="col-lg-12 text-right">
-                  <div class="col-lg-8">
-                    <h1 class="text-center">Becas de Estudio para el 2022</h1>
 
-                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              </div>
+            </div>
+          </div>
+        </div>
+    </div> -->
+    <div class="container mb-3 ">
+    </br>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="panel">
+          <div class="panel-heading">
+            <h1 class="text-center">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h1>
+          </div>
+          <di class="row">
+            <div class="ol-md-6">
+            </div>
+            <div class="ol-md-6">
+              <div class="text-center">
+                <p>
+                  <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                  <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                  <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                  <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                </p>
+              </div>
+            </div>
+          </di>
+          <div class="panel-body text-center">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="text-center">
+                  <img src="../assets/images/noticia2.jpg" height="250" width="380">
+                </div>
+              </div>
+              <div class="col-md-8">
+                <!-- texto -->
+                <div class="panel-heading">
+                  <h3 class=" text-center panel-title">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h3>
+                  <p><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat."</em></p>
+                  <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      ex ea commodo consequat.</p>
+                  <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                         ex ea commodo consequat.</p>
-                      </br>
-                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea commodo consequat.</p>
-                      </br>
-                      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea commodo consequat.</p>
-
-                  </div>
-
-
-                </div> -->
+                  <p class="inbox-item-text text-left" style="margin-top:6px">
+                    <a href="#"> Ir a Inscribire <i class="md ion-arrow-right-c"></i></a>
+                  </p>
+                  <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.</p>
+                  <!-- <div class="text-left">
+                    <p>
+                      <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                      <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                      <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                      <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                    </p>
+                  </div> -->
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
 
+    </div>
+  </div>
 
 
       <!-- Footer -->
