--- a/servicioscomunicacinales/calendar.html
+++ b/servicioscomunicacinales/calendar.html
@@ -159,41 +159,163 @@
             </div> <!-- end col -->
 
             <div class="col-md-3">
+
               <div class="widget">
                 <div class="widget-body">
                   <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+
+                    <div class="col-md-12 col-sm-12 col-xs-12 ">
                       <a href="#" data-toggle="modal" data-target="#add-category"
                         class="btn btn-lg btn-primary btn-block waves-effect waves-light">
                         <i class="fa fa-plus"></i> Nuevo Evento
                       </a>
-
                     </div>
+
                   </div>
+                  </br>
+
+                  <div class="row">
+
+                    <div class="col-mb-12 col-sm-12 col-xs-12">
+
+                      <div class="panel panel-color panel-primary">
+                        <div class="panel-heading">
+                          <h3 class="panel-title text-center">Eventos Recomendados</h3>
+                        </div>
+
+                        <div class="panel-body">
+                          <div class="row">
+
+                            <div class="col-md-12">
+                              <div class="panel panel-color panel-primary">
+                                <div class="panel-heading">
+                                  Evento N°1
+                                </div>
+                                <div class="panel-body">
+                                  <a href="#" >
+                                    See John Deep
+                                  </a>
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <p class="inbox-item-text" style="margin-top:6px">
+                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                      </p>
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                      <p>
+                                        <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                                      </p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-12">
+                              <div class="panel panel-color panel-primary">
+                                <div class="panel-heading">
+                                  Evento N°2
+                                </div>
+                                <div class="panel-body">
+                                  <a href="#" >
+                                    Hey!
+                                  </a>
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <p class="inbox-item-text" style="margin-top:6px">
+                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                      </p>
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                      <p>
+                                        <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                                      </p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-md-12">
+                              <div class="panel panel-color panel-primary">
+                                <div class="panel-heading">
+                                  Evento N°3
+                                </div>
+                                <div class="panel-body">
+                                  <a href="#" >
+                                    Buy a Moltran
+                                  </a>
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <p class="inbox-item-text" style="margin-top:6px">
+                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                      </p>
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                      <p>
+                                        <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                                        <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                                      </p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+
+
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+
                 </div>
               </div>
             </div> <!-- end col-->
           </div> <!-- end row -->
 
           <!-- BEGIN MODAL -->
-          <div class="modal fade none-border" id="event-modal">
+          <!-- EDITAR PARA QUE TRABAJE MAS ADOCK AL PROYECTO -->
+          <!-- <div class="modal fade none-border" id="event-modal">
             <div class="modal-dialog">
               <div class="modal-content">
+
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                  <h4 class="modal-title"><strong>Add Event</strong></h4>
+                  <h4 class="modal-title"><strong>Evento Agendado</strong></h4>
                 </div>
-                <div class="modal-body"></div>
+
+                <div class="modal-body">
+
+                </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-success save-event waves-effect waves-light">Create
-                    event</button>
-                  <button type="button" class="btn btn-danger delete-event waves-effect waves-light"
-                    data-dismiss="modal">Delete</button>
+
+                  <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">
+                    Close
+                  </button>
+
+                  <button type="button" class="btn btn-success save-event waves-effect waves-light">
+                    Create event
+                  </button>
+
+                  <button type="button" class="btn btn-danger delete-event waves-effect waves-light" data-dismiss="modal">
+                    Delete
+                  </button>
+
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Modal Add Category -->
           <div class="modal fade none-border" id="add-category">
@@ -201,34 +323,72 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                  <h4 class="modal-title"><strong>Add</strong> a category</h4>
+                  <h4 class="modal-title text-center"><strong>Agregar nuevo Evento</strong></h4>
                 </div>
                 <div class="modal-body">
                   <form role="form">
                     <div class="row">
+
                       <div class="col-md-6">
-                        <label class="control-label">Category Name</label>
-                        <input class="form-control form-white" placeholder="Enter name" type="text"
-                          name="category-name">
-                      </div>
-                      <div class="col-md-6">
-                        <label class="control-label">Choose Category Color</label>
-                        <select class="form-control form-white" data-placeholder="Choose a color..."
-                          name="category-color">
-                          <option value="success">Success</option>
-                          <option value="danger">Danger</option>
-                          <option value="primary">Primary</option>
-                          <option value="warning">Warning</option>
-                          <option value="inverse">Inverse</option>
+                        <label class="control-label">Tipo de Evento</label>
+                        <select class="form-control form-white" data-placeholder="Selecciona el tipo de Evento." name="category-color">
+                          <option value="1">Charlas</option>
+                          <option value="2">Webinar</option>
+                          <option value="3">Seminarios</option>
+                          <option value="4">Conferencias<option>
                         </select>
                       </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Nombre Evento</label>
+                        <input class="form-control form-white" placeholder="Nombre del Evento" type="text"name="category-name">
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Modalidad de Evento</label>
+                        <select class="form-control form-white" data-placeholder="Selecciona el tipo de Evento." name="category-color">
+                          <option value="1">Virtal</option>
+                          <option value="2">Presencial</option>
+                          <option value="3">Hibrido</option>
+                        </select>
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Dirección</label>
+                        <input class="form-control form-white" placeholder="Ingrese la Dirección" type="text"
+                          name="category-name">
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Área Tematica</label>
+                        <input class="form-control form-white" placeholder="Escriba el Tema" type="text" name="category-name">
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Perfil de Participantes</label>
+                        <input class="form-control form-white" placeholder="Describa los Participantes" type="text" name="category-name">
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Numero de Participantes</label>
+                        <input class="form-control form-white" placeholder="Ingrese el Numero de Participantes" type="number" name="category-name">
+                      </div>
+
+                      <div class="col-md-6">
+                        <label class="control-label">Contacto del Organizador</label>
+                        <input class="form-control form-white" placeholder="Ingrese el Telefono de Contacto" type="number" name="category-name">
+                      </div>
+
                     </div>
                   </form>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-danger waves-effect waves-light save-category"
-                    data-dismiss="modal">Save</button>
+                  <button type="button" class="btn btn-danger waves-effect waves-light save-category"data-dismiss="modal">
+                    Guardar
+                  </button>
+                  <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">
+                    Cerrar
+                  </button>
                 </div>
               </div>
             </div>
