--- a/vinculacion/vinculacion.html
+++ b/vinculacion/vinculacion.html
@@ -105,14 +105,16 @@
               <a href="../perfil/miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
             </li>
             <li>
-              <a href="../gest_informacion/gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
+              <a href="../gest_informacion/gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de
+                  Información </span>
               </a>
             </li>
             <li class="active">
               <a href="vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
             </li>
             <li>
-              <a href="../servicioscomunicacionales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
+              <a href="../servicioscomunicacinales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios
+                  Comunicacionales </span> </a>
             </li>
             <li>
               <a href=""><i class="fa fa-gear"></i> <span> Administrador</span> </a>
@@ -148,8 +150,9 @@
             <div class="panel-heading">
               <div class="input-group">
                 <span class="input-group-btn">
-                  <button type="button" class="btn waves-effect waves-light btn-danger"><i
-                      class="fa fa-plus-circle"></i></button>
+                  <a href="addpublic.html" type="button" class="btn waves-effect waves-light btn-danger">
+                    <i class="fa fa-plus-circle"></i>
+                  </a>
                 </span>
                 <h4 style="color:white; margin-left:20px;"> Crear Publicación de Intéres</h4>
               </div>
