--- a/vinculacion/addpublic.html
+++ b/vinculacion/addpublic.html
@@ -238,7 +238,7 @@
                               </div>
 
                               <div class="form-group">
-                                <label>Default Functionality</label>
+                                <label>Fecha de Vigencia</label>
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
