--- a/vinculacion/addpublic.html
+++ b/vinculacion/addpublic.html
@@ -195,7 +195,7 @@
                               <h3 class="panel-title text-center">Area Tematica</h3>
                             </div>
                             <div class="panel-body">
-                              :v
+                              contenido
                             </div>
                           </div>
                         </div>
