--- a/gest_informacion/gestInformacion.html
+++ b/gest_informacion/gestInformacion.html
@@ -103,17 +103,14 @@
               <a href="../perfil/miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
             </li>
             <li class="active">
-              <a href="gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de
-                  Información </span>
+              <a href="gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
               </a>
             </li>
             <li>
-              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación
-                </span> </a>
+              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación</span> </a>
             </li>
             <li>
-              <a href="../servicioscomunicacionales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios
-                  Comunicacionales </span> </a>
+              <a href="../servicioscomunicacionales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
             </li>
             <li>
               <a href=""><i class="fa fa-gear"></i> <span> Administrador</span> </a>
