--- a/servicioscomunicacionales/evento.html
+++ b/servicioscomunicacionales/evento.html
@@ -89,17 +89,17 @@
           <!-- Navigation Menu-->
           <ul class="navigation-menu" style="padding-left:10%">
             <li>
-              <a href="index.html"><i class="md md-home fa-3x"></i> <span> Home </span> </a>
+              <a href="../inicio/index.html"><i class="md md-home fa-3x"></i> <span> Home </span> </a>
             </li>
             <li>
-              <a href="miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
+              <a href="../perfil/miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
             </li>
             <li>
-              <a href="gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
+              <a href="../gest_informacion/gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
               </a>
             </li>
             <li>
-              <a href="vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
+              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
             </li>
             <li>
               <a href="calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
@@ -121,7 +121,62 @@
 
   <div class="wrapper">
     <div class="container">
+      </br>
+      <div class="row">
+        <div class="col-mb-12">
+          <div class="panel">
+            <div class="panel-heading">
+              <h1 class="text-center">Evento</h1>
+            </div>
+            <di class="row">
+              <div class="col-md-6">
+              </div>
+              <div class="col-md-6">
+                <div class="text-center">
+                  <p>
+                    <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
+                    <a href=""><i class="md ion-social-instagram fa-2x"></i></a>
+                    <a href=""><i class="md ion-social-twitter fa-2x"></i></a>
+                    <a href=""><i class="md ion-social-linkedin fa-2x"></i></a>
+                  </p>
+                </div>
+              </div>
+            </di>
+            <div class="panel-body text-center">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="text-center">
+                    <img src="../assets/images/evento.jpg" height="250" width="380">
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <!-- texto -->
+                  <div class="panel-heading">
+                    <h3 class=" text-center panel-title">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h3>
+                    <p><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      ex ea commodo consequat."</em></p>
+                    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat.</p>
+                    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                          ex ea commodo consequat.</p>
+                    <p class="inbox-item-text text-left" style="margin-top:6px">
+                      <a href="#"> Ir a Inscribire <i class="md ion-arrow-right-c"></i></a>
+                    </p>
+                    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                      ex ea commodo consequat.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
+
+          </div>
+        </div>
+      </div>
       <!-- Footer -->
       <footer class="footer text-right">
         <div class="container">
