--- a/inicio/fondo.html
+++ b/inicio/fondo.html
@@ -92,17 +92,17 @@
               <a href="index.html"><i class="md md-home fa-3x"></i> <span> Home </span> </a>
             </li>
             <li>
-              <a href="miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
+              <a href="../perfil/miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
             </li>
             <li>
-              <a href="gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
+              <a href="../gest_informacion/gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
               </a>
             </li>
             <li>
-              <a href="vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
+              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
             </li>
             <li>
-              <a href="calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
+              <a href="../servicioscomunicacionales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
             </li>
             <li>
               <a href=""><i class="fa fa-gear"></i> <span> Administrador</span> </a>
@@ -131,9 +131,9 @@
                 <h1 class="text-center">BECA DE DOCTORADO NACIONAL, AÑO ACADÉMICO 2022</h1>
               </div>
               <di class="row">
-                <div class="ol-md-6">
+                <div class="col-md-6">
                 </div>
-                <div class="ol-md-6">
+                <div class="col-md-6">
                   <div class="text-center">
                     <p>
                       <a href=""><i class="md ion-social-facebook fa-2x"></i></a>
