--- a/servicioscomunicacionales/calendar.html
+++ b/servicioscomunicacionales/calendar.html
@@ -192,13 +192,13 @@
                                   Evento N°1
                                 </div>
                                 <div class="panel-body">
-                                  <a href="#" >
+                                  <a href="evento.html" >
                                     See John Deep
                                   </a>
                                   <div class="row">
                                     <div class="col-md-6">
                                       <p class="inbox-item-text" style="margin-top:6px">
-                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                        <a href="evento.html"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
                                       </p>
                                     </div>
                                     <div class="col-md-6 text-right">
@@ -220,13 +220,13 @@
                                   Evento N°2
                                 </div>
                                 <div class="panel-body">
-                                  <a href="#" >
+                                  <a href="evento.html" >
                                     Hey!
                                   </a>
                                   <div class="row">
                                     <div class="col-md-6">
                                       <p class="inbox-item-text" style="margin-top:6px">
-                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                        <a href="evento.html"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
                                       </p>
                                     </div>
                                     <div class="col-md-6 text-right">
@@ -248,13 +248,13 @@
                                   Evento N°3
                                 </div>
                                 <div class="panel-body">
-                                  <a href="#" >
+                                  <a href="evento.html" >
                                     Buy a Moltran
                                   </a>
                                   <div class="row">
                                     <div class="col-md-6">
                                       <p class="inbox-item-text" style="margin-top:6px">
-                                        <a href="#"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
+                                        <a href="evento.html"> Ir al Evento <i class="md ion-arrow-right-c"></i></a>
                                       </p>
                                     </div>
                                     <div class="col-md-6 text-right">
