--- a/perfil/miPerfil.html
+++ b/perfil/miPerfil.html
@@ -18,6 +18,8 @@
   <link href="../assets/css/menu.css" rel="stylesheet" type="text/css">
   <link href="../assets/css/responsive.css" rel="stylesheet" type="text/css">
   <script src="../assets/js/modernizr.min.js"></script>
+  <!--Edicion Cliente -->
+  <link href="../assets/css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <!-- Navigation Bar-->
