--- a/inicio/index.html
+++ b/inicio/index.html
@@ -19,6 +19,9 @@
   <link href="../assets/css/pages.css" rel="stylesheet" type="text/css">
   <link href="../assets/css/menu.css" rel="stylesheet" type="text/css">
   <link href="../assets/css/responsive.css" rel="stylesheet" type="text/css">
+  <!--Edicion Cliente -->
+  <link href="../assets/css/estilos.css" rel="stylesheet" type="text/css">
+
   <script src="../assets/js/modernizr.min.js"></script>
 </head>
 <body>
@@ -32,15 +35,18 @@
               style="width:60px; margin-top:-11px;padding-right:10px"></a>
           <a href="../index.html" class="logo" style="margin-top:3px;"><span>Portal del <br>Investigador </span></a>
         </div>
+
         <!-- End Logo container-->
         <div class="menu-extras">
           <ul class="nav navbar-nav navbar-right pull-right">
+
             <li>
               <form role="search" class="navbar-left app-search pull-left hidden-xs">
                 <input type="text" placeholder="Buscar..." class="form-control">
                 <a href="#"><i class="fa fa-search"></i></a>
               </form>
             </li>
+
             <li class="dropdown user-box">
               <a href="#" class="dropdown-toggle waves-effect waves-light profile " data-toggle="dropdown"
                 aria-expanded="true">
@@ -82,20 +88,20 @@
               <a href="index.html"><i class="md md-home fa-3x"></i> <span> Home </span> </a>
             </li>
             <li>
-              <a href="../perfil/miPerfil.html"><i class="md  md-account-circle"></i> <span> Mi Perfil </span> </a>
+              <a href="../perfil/miPerfil.html"><i class="md  md-account-circle fa-3x"></i> <span> Mi Perfil </span> </a>
             </li>
             <li>
-              <a href="../gest_informacion/gestInformacion.html"><i class="fa fa-pie-chart fa-2x"></i> <span> Gestión de Información </span>
+              <a href="../gest_informacion/gestInformacion.html"><i class="fa  fa-bar-chart-o fa-3x"></i> <span> Gestión de Información </span>
               </a>
             </li>
             <li>
-              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
+              <a href="../vinculacion/vinculacion.html"><i class="fa fa-file-text-o fa-3x"></i> <span> Vinculación </span> </a>
             </li>
             <li>
-              <a href="../servicioscomunicacionales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
+              <a href="../servicioscomunicacionales/calendar.html"><i class="ion ion-speakerphone fa-3x"></i> <span> Servicios Comunicacionales </span> </a>
             </li>
             <li>
-              <a href=""><i class="fa fa-gear"></i> <span> Administrador</span> </a>
+              <a href=""><i class="ion ion-ios7-gear-outline fa-3x"></i> <span> Administrador</span> </a>
             </li>
           </ul>
           <!-- End navigation menu  -->
@@ -113,13 +119,7 @@
           <div class="panel panel-color panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title">Fondos Públicos Abiertos
-
-                <!-- <button type="button" style="float:right" class="btn btn-danger" style="color:black">Ver Más
-                  <i class="fa fa-plus"></i>
-                </button> -->
-
-                <a class="btn btn-danger" style="float:right" href="fondpublic.html" role="button">Ver Más <i class="fa fa-plus"></i></a>
-
+                <a class="btn btn-blue" style="float:right" href="fondpublic.html" role="button">Ver Más <i class="fa fa-plus"></i></a>
               </h3>
             </div>
             <div class="panel-body">
@@ -240,17 +240,23 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <ul class="pull-right list-inline m-b-0">
+          <ul class="pull-left list-inline m-b-0">
             <li>
-              <a href="#">About</a>
+              <a href="#"><i class="fa  fa-bar-chart-o"></i> Sobre Nosotros</a>
             </li>
             <li>
-              <a href="#">Help</a>
+              <a href="#"><i class="fa  fa-bar-chart-o"></i> Ayuda</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#"><i class="fa  fa-bar-chart-o"></i> Contacto</a>
             </li>
           </ul>
+        </div>
+
+        <div class="col-xs-6">
+          <div class="pull-right ">
+            Portal del Investigador
+          </div>
         </div>
       </div>
     </div>
